Committing Binary Tree

--- a/DS HashTables Trees/DS HashTables Trees/DSHashTableTree.csproj
+++ b/DS HashTables Trees/DS HashTables Trees/DSHashTableTree.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>DS_HashTables_Trees</RootNamespace>
+    <RootNamespace>DSHashTableTree</RootNamespace>
   </PropertyGroup>
 
 </Project>
